--- a/package.json
+++ b/package.json
@@ -1,21 +1,24 @@
 {
-    "name": "mi-plantilla-webpack",
-    "version": "1.0.0",
-    "description": "Plantilla base para proyectos con Webpack",
-    "main": "src/index.js",
-    "scripts": {
-      "build": "webpack --config webpack.prod.js",
-      "start": "webpack serve --config webpack.dev.js"
-    },
-    "devDependencies": {
-      "webpack": "^5.x.x",
-      "webpack-cli": "^4.x.x",
-      "webpack-dev-server": "^4.x.x",
-      "css-loader": "^6.x.x",
-      "style-loader": "^3.x.x",
-      "html-webpack-plugin": "^5.x.x",
-      "file-loader": "^6.x.x"
-    },
-    "dependencies": {}
+  "name": "mi-plantilla-webpack",
+  "version": "1.0.0",
+  "description": "Plantilla base para proyectos con Webpack",
+  "main": "src/index.js",
+  "scripts": {
+    "build": "webpack --config webpack.prod.js",
+    "start": "webpack serve --config webpack.dev.js"
+  },
+  "devDependencies": {
+    "webpack": "^5.x.x",
+    "webpack-cli": "^4.x.x",
+    "webpack-dev-server": "^4.x.x",
+    "css-loader": "^6.x.x",
+    "style-loader": "^3.x.x",
+    "html-webpack-plugin": "^5.x.x",
+    "webpack-merge": "^5.x.x",
+    "css-minimizer-webpack-plugin": "^3.x.x",
+    "terser-webpack-plugin": "^5.x.x"
+  },
+  "dependencies": {
+    "dotenv": "^10.x.x"
   }
-  
+}
